--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -156,6 +156,19 @@ components:
         isCompatible: 
           type: boolean
 
+    StackPackStep:
+      type: object
+      properties:
+        display:
+          type: string
+        name:
+          type: string
+        value:
+          type: object
+          properties:
+            _type:
+              type: string
+
     StackpackList:
       type: array
       items:
@@ -197,6 +210,11 @@ components:
           properties:
             version:
               type: string
+        steps:
+           type: array
+           items:
+             $ref: "#/components/schemas/StackPackStep"
+
     stackName:
       type: string
     ProvisionResponse:
