--- a/spec/health_sync.api.yaml
+++ b/spec/health_sync.api.yaml
@@ -17,7 +17,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/StreamList"
+                $ref: "health_sync_service_api.yaml#/components/schemas/StreamList"
   /synchronization/health/stream/{healthStreamUrn}/status:
     parameters:
       - $ref: "#/components/parameters/healthStreamUrn"
@@ -33,7 +33,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HealthStreamStatus"
+                $ref: "health_sync_service_api.yaml#/components/schemas/HealthStreamStatus"
         "400":
           $ref: "#/components/responses/urnBadRequest"
         "404":
@@ -85,7 +85,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SubStreamList"
+                $ref: "health_sync_service_api.yaml#/components/schemas/SubStreamList"
         "400":
           $ref: "#/components/responses/urnBadRequest"
         "404":
@@ -105,7 +105,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TopologyMatchResult"
+                $ref: "health_sync_service_api.yaml#/components/schemas/TopologyMatchResult"
         "400":
           $ref: "#/components/responses/urnBadRequest"
         "404":
@@ -126,7 +126,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HealthSubStreamStatus"
+                $ref: "health_sync_service_api.yaml#/components/schemas/HealthSubStreamStatus"
         "400":
           $ref: "#/components/responses/urnBadRequest"
         "404":
@@ -147,7 +147,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/TopologyMatchResult"
+                $ref: "health_sync_service_api.yaml#/components/schemas/TopologyMatchResult"
         "400":
           $ref: "#/components/responses/urnBadRequest"
         "404":
@@ -188,225 +188,6 @@ components:
         type: string
       description: Health synchronization sub stream id.
   schemas:
-    StreamListItem:
-      type: object
-      properties:
-        urn:
-          type: string
-        consistencyModel:
-          type: string
-        subStreams:
-          type: integer
-      required:
-        - urn
-        - consistencyModel
-        - subStreams
-    StreamList:
-      type: object
-      properties:
-        items:
-          type: array
-          items:
-            $ref: "#/components/schemas/StreamListItem"
-      required:
-        - items
-    SubStreamListItem:
-      type: object
-      properties:
-        subStreamId:
-          type: string
-        subStreamState:
-          $ref: "#/components/schemas/HealthSubStreamConsistencyState"
-        checkStateCount:
-          type: integer
-      required:
-        - subStreamId
-        - subStreamState
-        - checkStateCount
-    SubStreamList:
-      type: object
-      properties:
-        subStreams:
-          type: array
-          items:
-            $ref: "#/components/schemas/SubStreamListItem"
-      required:
-        - subStreams
-    MetricBucketValue:
-      type: object
-      properties:
-        value:
-          type: number
-          format: double
-    MetricBucketValues:
-      type: array
-      items:
-        $ref: "#/components/schemas/MetricBucketValue"
-    HealthStreamMetrics:
-      type: object
-      properties:
-        bucketSizeSeconds:
-          type: integer
-        latencySeconds:
-          $ref: "#/components/schemas/MetricBucketValues"
-        messagePerSecond:
-          $ref: "#/components/schemas/MetricBucketValues"
-        createsPerSecond:
-          $ref: "#/components/schemas/MetricBucketValues"
-        updatesPerSecond:
-          $ref: "#/components/schemas/MetricBucketValues"
-        deletesPerSecond:
-          $ref: "#/components/schemas/MetricBucketValues"
-      required:
-        - bucketSizeSeconds
-    UnmatchedCheckState:
-      type: object
-      properties:
-        checkStateId:
-          type: string
-        topologyElementIdentifier:
-          type: string
-      required:
-        - checkStateId
-        - topologyElementIdentifier
-    MultipleMatchesCheckState:
-      type: object
-      properties:
-        checkStateId:
-          type: string
-        topologyElementIdentifier:
-          type: string
-        matchCount:
-          type: integer
-      required:
-        - checkStateId
-        - topologyElementIdentifier
-        - matchCount
-    TopologyMatchResult:
-      type: object
-      properties:
-        matchedCheckStates:
-          type: integer
-        unmatchedCheckStates:
-          type: array
-          items:
-            $ref: "#/components/schemas/UnmatchedCheckState"
-        multipleMatchesCheckStates:
-          type: array
-          items:
-            $ref: "#/components/schemas/MultipleMatchesCheckState"
-      required:
-        - matchedCheckStates
-        - unmatchedCheckStates
-        - multipleMatchesCheckStates
-    HealthStreamError:
-      type: object
-      properties:
-        errorCode:
-          type: string
-        level:
-          type: string
-        error:
-          type: string
-        count:
-          type: integer
-      required:
-        - errorCode
-        - level
-        - error
-        - count
-    HealthStreamErrors:
-      type: array
-      items:
-        $ref: "#/components/schemas/HealthStreamError"
-    HealthSubStreamSnapshot:
-      type: object
-      properties:
-        _type:
-          type: string
-          enum:
-            - HealthSubStreamSnapshot
-        expiryIntervalMs:
-          type: integer
-        repeatIntervalMs:
-          type: integer
-      required:
-        - _type
-        - repeatIntervalMs
-    HealthSubStreamExpiry:
-      type: object
-      properties:
-        _type:
-          type: string
-          enum:
-            - HealthSubStreamExpiry
-        expiryIntervalMs:
-          type: integer
-        repeatIntervalMs:
-          type: integer
-      required:
-        - _type
-        - repeatIntervalMs
-        - expiryIntervalMs
-    HealthSubStreamTransactionalIncrements:
-      type: object
-      properties:
-        _type:
-          type: string
-          enum:
-            - HealthSubStreamTransactionalIncrements
-        offset:
-          type: integer
-          format: int64
-        batchIndex:
-          type: integer
-          format: int64
-      required:
-        - _type
-        - offset
-    HealthSubStreamConsistencyState:
-      discriminator:
-        propertyName: _type
-      oneOf:
-        - $ref: "#/components/schemas/HealthSubStreamSnapshot"
-        - $ref: "#/components/schemas/HealthSubStreamExpiry"
-        - $ref: "#/components/schemas/HealthSubStreamTransactionalIncrements"
-      required:
-        - _type
-    HealthSubStreamStatus:
-      type: object
-      properties:
-        errors:
-          $ref: "#/components/schemas/HealthStreamErrors"
-        metrics:
-          $ref: "#/components/schemas/HealthStreamMetrics"
-        subStreamState:
-          $ref: "#/components/schemas/HealthSubStreamConsistencyState"
-        checkStateCount:
-          type: integer
-      required:
-        - metrics
-        - subStreamState
-        - checkStateCount
-    HealthStreamStatus:
-      type: object
-      properties:
-        partition:
-          type: integer
-        consistencyModel:
-          type: string
-        recoverMessage:
-          type: string
-        globalErrors:
-          $ref: "#/components/schemas/HealthStreamErrors"
-        aggregateMetrics:
-          $ref: "#/components/schemas/HealthStreamMetrics"
-        mainStreamStatus:
-          $ref: "#/components/schemas/HealthSubStreamStatus"
-      required:
-        - partition
-        - consistencyModel
-        - aggregateMetrics
     InvalidUrn:
       type: object
       properties:
@@ -417,6 +198,14 @@ components:
       required:
         - urn
         - message
+    HealthSubStreamError:
+      discriminator:
+        propertyName: _type
+      oneOf:
+        - $ref: "#/components/schemas/HealthStreamNotFound"
+        - $ref: "#/components/schemas/HealthSubStreamNotFound"
+      required:
+        - _type        
     HealthStreamNotFound:
       type: object
       properties:
@@ -442,12 +231,4 @@ components:
           type: string
       required:
         - urn
-        - _type
-    HealthSubStreamError:
-      discriminator:
-        propertyName: _type
-      oneOf:
-        - $ref: "#/components/schemas/HealthStreamNotFound"
-        - $ref: "#/components/schemas/HealthSubStreamNotFound"
-      required:
-        - _type
+        - _type        
