--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -81,6 +81,29 @@ paths:
                 $ref: "#/components/schemas/ProvisionResponse"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+  /stackpack/{stackName}/confirm-manual-step/{stackId}:
+    post:
+      tags:
+        - stackpack
+      parameters:
+        - in: path
+          namme: stackName
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: stackId
+          required: true
+          schema:
+            type: number
+      summary: "Confirm manual steps"
+      operationId: confirmManualSteps
+      description: "Confirm manual steps oof the stackpack"
+      requestBody:
+        content:
+          applicationo/json:
+            schema:
+              type: string
 components:
   parameters:
     stackName:
