fix type mistake

--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -87,7 +87,7 @@ paths:
         - stackpack
       parameters:
         - in: path
-          namme: stackName
+          name: stackName
           required: true
           schema:
             type: string
