add responses description

--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -106,6 +106,7 @@ paths:
               type: string
       responses:
         "200":
+          description: "successful response"
           content:
             application/json:
               schema:
