change type of id

--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -95,7 +95,7 @@ paths:
           name: stackId
           required: true
           schema:
-            type: integers
+            type: integer
             format: int64
       summary: "Confirm manual steps"
       operationId: confirmManualSteps
