--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -102,9 +102,7 @@ paths:
       description: "Confirm manual steps oof the stackpack"
       requestBody:
         content:
-          applicationo/json:
-            schema:
-              type: string
+          applicationo/json: {}
       responses:
         "200":
           description: "successful response"
