--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -99,7 +99,7 @@ paths:
             format: int64
       summary: "Confirm manual steps"
       operationId: confirmManualSteps
-      description: "Confirm manual steps oof the stackpack"
+      description: "Confirm manual steps of the stackpack"
       responses:
         "200":
           description: "successful response"
