--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -81,18 +81,18 @@ paths:
                 $ref: "#/components/schemas/ProvisionResponse"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
-  /stackpack/{stackName}/confirm-manual-step/{stackId}:
+  /stackpack/{stackpackName}/confirm-manual-step/{stackpackInstanceId}:
     post:
       tags:
         - stackpack
       parameters:
         - in: path
-          name: stackName
+          name: stackpackName
           required: true
           schema:
             type: string
         - in: path
-          name: stackId
+          name: stackpackInstanceId
           required: true
           schema:
             type: integer
