--- a/spec/monitors_urn.api.yaml
+++ b/spec/monitors_urn.api.yaml
@@ -84,7 +84,7 @@ paths:
         "200":
           $ref: "monitors.api.yaml#/components/responses/monitorStatus"
         "404":
-          $ref: "#/components/responses/monitorIdentifierNotFoundError"
+          $ref: "#/components/responses/monitorStatusIdentifierNotFoundError"
         "500":
           $ref: "monitors.api.yaml#/components/responses/monitorApiError"
 
@@ -117,6 +117,12 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/MonitorIdentifierNotFoundError"
+    monitorStatusIdentifierNotFoundError:
+      description: "monitor status was not found in the database"
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/MonitorStatusIdentifierNotFoundError"            
   schemas:
     MonitorUrnId:
       type: string
@@ -133,3 +139,16 @@ components:
       required:
         - _type
         - monitorIdentifier
+
+    MonitorStatusIdentifierNotFoundError:
+      type: object
+      properties:
+        _type:
+          type: string
+          enum:
+            - MonitorStatusIdentifierNotFoundError
+        monitorIdentifier:
+          $ref: "#/components/schemas/MonitorUrnId"
+      required:
+        - _type
+        - monitorIdentifier        
