--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -7,17 +7,40 @@ on:
     branches: [ master ]
 
 jobs:
-  test_job:
-    runs-on: ubuntu-latest
+  build-docs:
     name: Build and deploy openapi docs
+    runs-on: ubuntu-latest
     steps:
-      # To use this repository's private action, you must check out the repository
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          ref: master
+    - name: Delete old docs branch
+      uses: dawidd6/action-delete-branch@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branches: docs
+    - name: Extract source branch name (current branch)
+      shell: bash
+      run: echo "##[set-output name=SOURCE_BRANCH_NAME;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
+    - name: create new docsbranch
+      uses: peterjgrainger/action-create-branch@v2.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        branch: 'docs'
+    - name: checkout docs branch
+      uses: actions/checkout@v2
+      with:
+        ref: docs
+    - name: Build docs from openapi.yaml
+      uses: seeebiii/redoc-cli-github-action@v10
+      with:
+        args: 'bundle spec/openapi.yaml -o docs/index.html'
+    - name: git config, commit, push
+      run: |
+        # Stage changes and commit + push
+        git status
+        git config user.name "GitHub Actions Bot"
+        git config user.email "<>"
+        git add -A
+        git commit -m "[AUTOMATED] Build openapi docs from ${{ steps.extract_branch.outputs.SOURCE_BRANCH_NAME }}"
+        git push -u origin docs
 
-      - name: redoc-cli test
-        uses: seeebiii/redoc-cli-github-action@v10
-        with:
-          args: 'bundle spec/openapi.yaml -o docs/index.html'
