--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - check
+  - publish
 
 .nix-base:
   image: "nixos/nix:2.8.0"
@@ -24,8 +25,9 @@ openapi-lint:
 
 publish-docs:
   extends: .nix-base
-  stage: check
+  stage: publish
   rules:
-    - when: always
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^[1-9]\.*/'
+      when: on_success
   script:
-    - nix develop -c scripts/publish.sh $CI_COMMIT_TAG 
+    - nix develop -c scripts/publish.sh $CI_COMMIT_TAG
