--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ publish-docs:
   extends: .nix-base
   stage: publish
   rules:
-    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^[1-9]\.*/'
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^v[1-9]\.*/'
       when: on_success
   script:
     - nix develop -c scripts/publish.sh $CI_COMMIT_TAG
