--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -118,6 +118,34 @@ paths:
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 
+  /stackpack/{stackName}/upgrade:
+    post:
+      tags:
+        - stackpack
+      parameters:
+        - in: path
+          name: stackName
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: unlocked
+          allowReserved: true
+          required: true
+          schema:
+            type: string
+      summary: "Upgrade API"
+      operationId: upgradeStackPack
+      description: "Upgrade stackpack"
+      responses:
+        "200":
+          description: "successful"
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 components:
   parameters:
     stackName:
@@ -191,7 +219,7 @@ components:
             - COMING_SOON
             - HIDDEN
             - BROKEN
-        isCompatible: 
+        isCompatible:
           type: boolean
 
     StackPackStep:
@@ -249,9 +277,9 @@ components:
             version:
               type: string
         steps:
-           type: array
-           items:
-             $ref: "#/components/schemas/StackPackStep"
+          type: array
+          items:
+            $ref: "#/components/schemas/StackPackStep"
 
     stackName:
       type: string
