--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -146,6 +146,34 @@ paths:
                 type: string
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+  /stackpack/{stackpackName}/confirm-manual-steps/{stackpackInstanceId}:
+    post:
+      tags:
+        - stackpack
+      parameters:
+        - in: path
+          name: stackpackName
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: stackpackInstanceId
+          required: true
+          schema:
+            type: integer
+            format: int64
+      summary: "Confirm manual steps"
+      operationId: confirmManualSteps
+      description: "Confirm manual steps of the stackpack"
+      responses:
+        "200":
+          description: "successful response"
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 components:
   parameters:
     stackName:
