STAC-16993: Make synchronization/health/streams consistent
Signed-off-by: Jeroen van Erp <jeroen@hierynomus.com>

--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -62,11 +62,11 @@ paths:
       operationId: runMonitor
       responses:
         "200":
-          $ref: "monitors.api.yaml#/components/responses/monitorRunResult"
+          $ref: "#/components/responses/monitorRunResult"
         "404":
           $ref: "#/components/responses/monitorNotFoundError"
         "500":
-          $ref: "monitors.api.yaml#/components/responses/monitorApiError"
+          $ref: "#/components/responses/monitorApiError"
 
   /monitors/{monitorIdOrUrn}/status:
     get:
