STAC-0: use (long) integer for timestamp to prevent precision loss

--- a/spec/anomalies.api.yaml
+++ b/spec/anomalies.api.yaml
@@ -73,7 +73,7 @@ components:
     Point:
       properties:
         ts:
-          type: number
+          type: integer
           format: int64
         v:
           type: number
