--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -161,7 +161,7 @@ components:
   schemas:
     MonitorIdOrUrn:
       type: string
-      pattern: ^urn:[a-zA-Z0-9:-]+|[0-9]+$
+      pattern: ^urn:.+|[0-9]+$
 
     MonitorId:
       type: integer
