--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,8 @@ publish-docs:
   extends: .nix-base
   stage: publish
   rules:
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^.*-rc\.[0-9]+$/'
+      when: never
     - if: '$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^v[1-9]\.*/'
       when: on_success
   script:
